add MIT license

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,6 @@
             "Petja\\Test": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "license": "MIT"
 }
